[tool.poetry]
name = "cloudflare-images"
description = "Wrapper around Cloudflare Images API"
version = "0.1.3"
authors = ["Marcelino G. Veloso III <contact@mv3.dev>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://mv3.dev"
repository = "https://github.com/justmars/cloudflare-images"
documentation = "https://mv3.dev/cloudflare-images"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.0"
start-cloudflare = "^0.0.5"

[tool.poetry.group.dev.dependencies]
rich = "^13.3"
pytest = "^7.2"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.2.6"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --doctest-modules --cov"
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests", "cloudflare_images"]

[tool.ruff]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
